SideMenu mobile size width overflow bug fixed.

--- a/src/scss/FollowSuggestions.scss
+++ b/src/scss/FollowSuggestions.scss
@@ -20,6 +20,7 @@
   color: rgb(51, 49, 49);
   letter-spacing: 1px;
   margin-bottom: 1rem;
+  padding-left: 0.5rem;
 }
 
 .suggestion-card {
@@ -60,13 +61,13 @@
 }
 
 .user-name {
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 700;
-  color: #0f1419;
+  color: #121a21;
 }
 
 .user-handle {
-  color: #536471;
+  color: #1d1e20;
   font-size: 10px;
   margin-bottom: 16px;
 }
@@ -93,4 +94,38 @@
 
 .follow-button:hover {
   color: #272c30;
+}
+
+@media (max-width: 1224px) {
+  .follow-suggestions-container {
+    width: 100%;
+  }
+  .follow-suggestions {
+    width: 100%;
+  }
+  .suggestion-card {
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+
+  .user-info {
+    text-align: left;
+  }
+  .user-avatar {
+    margin-right: 5px;
+  }
+  .avatar-initial {
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .user-avatar {
+    display: none;
+  }
+  .suggestion-card {
+    gap: 1rem;
+  }
 }
