--- a/src/scss/blog-post.scss
+++ b/src/scss/blog-post.scss
@@ -181,7 +181,7 @@
       align-items: center;
       justify-content: center;
       font-weight: bold;
-      font-size: 8px;
+      font-size: 10px;
     }
 
     .post-title {
@@ -192,7 +192,7 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       gap: 0.2rem;
       h3 {
         font-size: 1.1rem;
@@ -295,6 +295,7 @@
     }
     .col2 {
       display: flex;
+      justify-items: center;
       flex-direction: row;
       margin-bottom: 1rem;
       width: 100%;
@@ -326,8 +327,27 @@
   }
   .post-img {
     border-radius: 3px;
-    max-height: 200px;
-    width: 150px;
     height: 100%;
+    max-height: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+  .col2 {
+    flex-direction: column !important;
+
+    .Blog-post {
+      flex-direction: column !important;
+      align-items: center;
+      justify-content: center;
+    }
+    .post-img {
+      max-width: 100%;
+      height: auto;
+    }
+    .post-data {
+      max-width: 100%;
+      width: 100%;
+    }
   }
 }
